AuthController-Actualizado.Scribe
